--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ border-radius: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-     border: 2px solid red; 
+     /* border: 2px solid red;  */
     /* margin-top: 20px; */
    }
    .note-tex h2{
@@ -218,7 +218,7 @@ border-radius: 5px;
 
    .card-container{
     /* background-color: #627382;*/
-    border: 2px solid red; 
+    /* border: 2px solid red;  */
     width: 1360px;
     height: 300px;
     text-align: center;
@@ -257,4 +257,71 @@ border-radius: 5px;
      line-height: 24px;
     }
 
+    /* card section end here  00000000000000000000000000000000000000000 */
+    /* Second Brain Section Here */
+    .second-brain{
+         width: 1360px;
+        height: 600px;  
+        /* border: 2px solid red; */
+        /* margin-top: 120px; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 120px;
+        gap: 60px;
+         margin: 0 auto; 
+         margin-top: 120px;
+         /* background-color: #627382; */
+         justify-content: space-between;
+       
+    }
+    .brain-img{
+        
+        /* border: 2px solid blue;  */
+    }
+    .second-text{
+     
+        /* border: 2px solid green;  */
+        /* display: flex; */
+        flex-direction: column;
+         justify-content:flex-start; 
+        align-items: flex-start;
+        gap: 16px; 
+        /* margin-top: 120px;} */}
+        .para-head{
+            font-size: 16px;
+            color:#30B868 ;
+            margin-bottom: 16px;
+        }
+        .second-text h2{
+            width: 500px;
+            font-size: 48px;
+            font-weight: 700;
+            color: #001931;
+            margin-bottom: 16px; 
 
+        }
+        .para-inon{
+            color: #001931;
+            margin-bottom: 40px;
+            font-size: 16px;
+           font-style: regular;
+           font-size: 16px;
+           font-weight: 400;
+           line-height: 20px;
+            /* background-color: #F95555; */
+        }
+        .list-f li{
+            font-size: 20px;
+            color: #001931;
+            /* margin-bottom: 16px; */
+            /* list-style: none; */
+            font-style: medium;
+            font-weight: 500;
+            line-height: 20px;
+            /* gap: 20px; */
+            
+        }
+         /* Second Brain Section Ends Here 00000000000000000000000000000000000 */
+
+      
